--- a/Entrega-2-Js/index.html
+++ b/Entrega-2-Js/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Carrito</title>
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/skeleton.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -49,12 +51,12 @@
           <div class="six columns">
             <div class="contenido-hero">
               <h2>Aprende algo nuevo</h2>
-              <p>Todos los cursos a $15</p>
+              <p>Todos los cursos a $1.500</p>
               <form action="#" id="busqueda" method="post" class="formulario">
                 <input
                   class="u-full-width"
                   type="text"
-                  placeholder="¿Que te gustaría Aprender?"
+                  placeholder="¿Que curso estás buscando?"
                   id="buscador"
                 />
                 <input
@@ -74,13 +76,13 @@
         <div class="row">
           <div class="four columns icono icono1">
             <p>
-              20,000 Cursos en línea <br />
+              20.000 Cursos en línea <br />
               Explora los temas más recientes
             </p>
           </div>
           <div class="four columns icono icono2">
             <p>
-              Instructores Expertos <br />
+              Profesores Expertos <br />
               Aprende con distintos estilos
             </p>
           </div>
@@ -101,10 +103,9 @@
           <div class="card">
             <img src="./img/curso1.jpg" class="imagen-curso u-full-width" />
             <div class="info-card">
-              <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
-              <p>Jonathan Garcia</p>
+              <h4>HTML5, CSS3, JavaScript inicial</h4>
               <img src="./img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$15</span></p>
+              <p class="precio">$2.000 <span class="u-pull-right">$1.500</span></p>
               <a
                 href="#"
                 class="u-full-width button-primary button input agregar-carrito"
@@ -119,9 +120,8 @@
             <img src="img/curso2.jpg" class="imagen-curso u-full-width" />
             <div class="info-card">
               <h4>Curso de Comida Vegetariana</h4>
-              <p>Jonathan Garcia</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$15</span></p>
+              <p class="precio">$2.000 <span class="u-pull-right">$1.500</span></p>
               <a
                 href="#"
                 class="u-full-width button-primary button input agregar-carrito"
@@ -136,9 +136,8 @@
             <img src="img/curso3.jpg" class="imagen-curso u-full-width" />
             <div class="info-card">
               <h4>Guitarra para Principiantes</h4>
-              <p>Jonathan Garcia</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$15</span></p>
+              <p class="precio">$2.000 <span class="u-pull-right">$1.500</span></p>
               <a
                 href="#"
                 class="u-full-width button-primary button input agregar-carrito"
@@ -149,16 +148,14 @@
           </div>
         </div>
       </div>
-
       <div class="row">
         <div class="four columns">
           <div class="card">
             <img src="img/curso4.jpg" class="imagen-curso u-full-width" />
             <div class="info-card">
               <h4>Huerto en tu casa</h4>
-              <p>Jonathan Garcia</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$15</span></p>
+              <p class="precio">$2.000<span class="u-pull-right">$1.500</span></p>
               <a
                 href="#"
                 class="u-full-width button-primary button input agregar-carrito"
@@ -172,10 +169,9 @@
           <div class="card">
             <img src="img/curso5.jpg" class="imagen-curso u-full-width" />
             <div class="info-card">
-              <h4>Decoración con productos de tu hogar</h4>
-              <p>Jonathan Garcia</p>
+              <h4>Decoración para tu hogar</h4>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$15</span></p>
+              <p class="precio">$2.000 <span class="u-pull-right">$1.500</span></p>
               <a
                 href="#"
                 class="u-full-width button-primary button input agregar-carrito"
@@ -190,9 +186,9 @@
             <img src="img/curso1.jpg" class="imagen-curso u-full-width" />
             <div class="info-card">
               <h4>Diseño Web para Principiantes</h4>
-              <p>Jonathan Garcia</p>
+
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$15</span></p>
+              <p class="precio">$2.000 <span class="u-pull-right">$1.500</span></p>
               <a
                 href="#"
                 class="u-full-width button-primary button input agregar-carrito"
@@ -203,16 +199,14 @@
           </div>
         </div>
       </div>
-
       <div class="row">
         <div class="four columns">
           <div class="card">
             <img src="img/curso2.jpg" class="imagen-curso u-full-width" />
             <div class="info-card">
-              <h4>Comida Mexicana para principiantes</h4>
-              <p>Jonathan Garcia</p>
+              <h4>Comida Mexicana</h4>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$15</span></p>
+              <p class="precio">$2.000 <span class="u-pull-right">$1.500</span></p>
               <a
                 href="#"
                 class="u-full-width button-primary button input agregar-carrito"
@@ -227,9 +221,8 @@
             <img src="img/curso3.jpg" class="imagen-curso u-full-width" />
             <div class="info-card">
               <h4>Estudio Musical en tu casa</h4>
-              <p>Jonathan Garcia</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$15</span></p>
+              <p class="precio">$2.000 <span class="u-pull-right">$1.500</span></p>
               <a
                 href="#"
                 class="u-full-width button-primary button input agregar-carrito"
@@ -243,10 +236,9 @@
           <div class="card">
             <img src="img/curso4.jpg" class="imagen-curso u-full-width" />
             <div class="info-card">
-              <h4>Cosecha tus propias frutas y verduras</h4>
-              <p>Jonathan Garcia</p>
+              <h4>Cosecha tus frutas y verduras</h4>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$15</span></p>
+              <p class="precio">$2.000 <span class="u-pull-right">$1.500</span></p>
               <a
                 href="#"
                 class="u-full-width button-primary button input agregar-carrito"
@@ -257,16 +249,14 @@
           </div>
         </div>
       </div>
-
       <div class="row">
         <div class="four columns">
           <div class="card">
             <img src="img/curso5.jpg" class="imagen-curso u-full-width" />
             <div class="info-card">
               <h4>Prepara galletas caseras</h4>
-              <p>Jonathan Garcia</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$15</span></p>
+              <p class="precio">$2.000 <span class="u-pull-right">$1.500</span></p>
               <a
                 href="#"
                 class="u-full-width button-primary button input agregar-carrito"
@@ -281,9 +271,8 @@
             <img src="img/curso1.jpg" class="imagen-curso u-full-width" />
             <div class="info-card">
               <h4>JavaScript Moderno con ES6</h4>
-              <p>Jonathan Garcia</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$15</span></p>
+              <p class="precio">$2.000 <span class="u-pull-right">$1.500</span></p>
               <a
                 href="#"
                 class="u-full-width button-primary button input agregar-carrito"
@@ -298,42 +287,26 @@
             <img src="img/curso2.jpg" class="imagen-curso u-full-width" />
             <div class="info-card">
               <h4>100 Recetas de Comida Natural</h4>
-              <p>Jonathan Garcia</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$15</span></p>
+              <p class="precio">$2.000 <span class="u-pull-right">$1.500</span></p>
               <a
                 href="#"
                 class="u-full-width button-primary button input agregar-carrito"
                 data-id="12"
-                >Agregar Al Carrito</a
+                >Agregar al carrito</a
               >
             </div>
           </div>
         </div>
       </div>
     </div>
-
     <footer id="footer" class="footer">
       <div class="container">
-        <div class="row">
-          <div class="four columns">
-            <nav id="principal" class="menu">
-              <a class="" href="#">Para tu Negocio</a>
-              <a class="" href="#">Convertite en Tutor</a>
-              <a class="" href="#">Aplicaciones Móviles</a>
-              <a class="" href="#">Soporte</a>
-            </nav>
-          </div>
-          <div class="four columns">
-            <nav id="secundaria" class="menu">
-              <a class="" href="#">¿Quienes Somos?</a>
-              <a class="" href="#">Empleo</a>
-            </nav>
-          </div>
-        </div>
+            <p >Jonathan Garcia &copy; Todos Los Derechos Reservados 2022</p>
+      </nav>
       </div>
+      
     </footer>
-
     <script src="./js/mains.js"></script>
   </body>
 </html>
