--- a/Entrega-2-Js/index.html
+++ b/Entrega-2-Js/index.html
@@ -34,7 +34,7 @@
                     <tbody></tbody>
                   </table>
 
-                  <a href="#" id="vaciar-carrito" class="button u-full-width"
+                  <a href="#" id="vaciar-carrito" class="button u-full-width" onclick="clickVaciar()"
                     >Vaciar carrito</a
                   >
                 </div>
@@ -307,6 +307,7 @@
       </div>
       
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/mains.js"></script>
   </body>
 </html>
